--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
 <script>
   // Sample project data
   const projects = [
-    { name: "Project 1", description: "Description of Project 1", link: "project1.html" },
-    { name: "Project 2", description: "Description of Project 2", link: "project2.html" },
-    { name: "Project 3", description: "Description of Project 3", link: "project3.html" }
+    { name: "Calculator", description: "calculator usimg html, css and js", link: "../calculator" },
     // Add more projects as needed
   ];
 
