--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <script>
   // Sample project data
   const projects = [
-    { name: "Calculator", description: "calculator usimg html, css and js", link: "./calculator" },
+    { name: "Calculator", description: "calculator usimg html, css and js. This code is written by \n 1) Razique Hasan 2) Raiyan Hasan", link: "./calculator" },
     // Add more projects as needed
   ];
 
