--- a/calculator/index.html
+++ b/calculator/index.html
@@ -16,9 +16,9 @@
         <div id="keys">
             <button onclick="backspace()"><i class="fas fa-backspace" style="font-size: 2.5rem;"></i></button>
 
-            <button onclick="appendToDisplay('(')">(</button>
-            <button onclick="appendToDisplay(')')">)</button>
-            <button onclick="clearDisplay()" class="operator-btn">C</button>
+            <button onclick="appendToDisplay('(')" class="operator-btn">(</button>
+            <button onclick="appendToDisplay(')')" class="operator-btn">)</button>
+            <button onclick="clearDisplay()" class="operator-btn" >C</button>
             <button onclick="appendToDisplay('7')">7</button>
             <button onclick="appendToDisplay('8')">8</button>
             <button onclick="appendToDisplay('9')">9</button>
@@ -32,12 +32,12 @@
             <button onclick="appendToDisplay('2')">2</button>
             <button onclick="appendToDisplay('3')">3</button>
             <button onclick="appendToDisplay('*')" class="operator-btn">*</button>
-            <button onclick="appendToDisplay('.')">.</button>
+            <button onclick="appendToDisplay('.')" class="operator-btn">.</button>
             <button onclick="appendToDisplay('0')">0</button>
             <button onclick="appendToDisplay('/')" class="operator-btn">/</button>
         
            
-            <button onclick="calculate()">=</button>
+            <button onclick="calculate()" class="operator-btn">=</button>
 
         </div>
     </div>
