--- a/calculator/index.html
+++ b/calculator/index.html
@@ -14,7 +14,7 @@
     <div id="calculator">
         <input readonly id="display">
         <div id="keys">
-            <button onclick="backspace()"><i class="fas fa-backspace" style="font-size: 2.5rem;"></i></button>
+            <button onclick="backspace()" class="operator-btn"><i class="fas fa-backspace" style="font-size: 2.5rem;"></i></button>
 
             <button onclick="appendToDisplay('(')" class="operator-btn">(</button>
             <button onclick="appendToDisplay(')')" class="operator-btn">)</button>
