--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projects</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="./projects.jpeg" type="image/x-icon">
-
 </head>
 <body>
+      <header>
+        <h1>Projects</h1>
+        <nav>
+            <a href="#projects1">Calculator</a>
+
+        </nav>
+      </header>
+      <main>
+        <a href="./calculator/index.html">
+          <article class="card" id="projects1">
+            <figure>
+              <img src="./projects.jpeg" alt="Calculator" height="500px" width="500px">
+              <figcaption>Calculator</figcaption>
+            </figure>
+          </article>
   
+        </a>
+      </main>
+      <footer>
+        <p>&copy; Raiyan Hasan</p>
+      </footer>
 </body>
 </html>
