--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
           </article>
   
         </a>
+        <a href="./tik tak toe/index.html">
+          <article class="card" id="projects1">
+            <figure>
+              <img src="./projects.jpeg" alt="Tik tak toe" height="500px" width="500px">
+              <figcaption><span class="nowrap">Tik Tak toe</span></figcaption>
+            </figure>
+          </article>
+  
+        </a>
       </main>
       <footer>
         <p>&copy; Raiyan Hasan</p>
