--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Projects</h1>
         <nav>
             <a href="#projects1">Calculator</a>
+            <a href="#projects2">Tik Tak Toe</a>
 
         </nav>
       </header>
@@ -26,7 +27,7 @@
   
         </a>
         <a href="./tik tak toe/index.html">
-          <article class="card" id="projects1">
+          <article class="card" id="projects2">
             <figure>
               <img src="./projects.jpeg" alt="Tik tak toe" height="500px" width="500px">
               <figcaption><span class="nowrap">Tik Tak toe</span></figcaption>
