--- a/tik tak toe/index.html
+++ b/tik tak toe/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-image: url('https://image.pollinations.ai/prompt/image of a village ');
+            background:skyblue url('https://image.pollinations.ai/prompt/image of a village ');
             background-repeat: none;
             background-size: cover;
         }
