--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
       <header>
         <h1>Projects</h1>
         <nav>
+          <a href="#project3">Ludo</a>
             <a href="#projects1">Calculator</a>
             <a href="#projects2">Tik Tak Toe</a>
 
         </nav>
       </header>
       <main>
+        <a href="./LUDO/index.html">
+          <article class="card" id="projects3">
+            <figure>
+              <img src="./ludo.jpg" alt="Ludo" height="500px" width="500px">
+              <figcaption><span class="nowrap">Ludo</span></figcaption>
+            </figure>
+          </article>
+  
+        </a>
         <a href="./calculator/index.html">
           <article class="card" id="projects1">
             <figure>
