--- a/LUDO copy/index.html
+++ b/LUDO copy/index.html
@@ -5,15 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ludo</title>
+    <script src="https://kit.fontawesome.com/002a13abdf.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./responsive.css">
 </head>
 
 <body>
+    <header>
+        <div class="forms">
+            
+        </div>
+
+    </header>
     <main>
         <div class="player1-2">
-            <div class="p-red">
-
+            <div class="p-red" style="color: red;">
+                <div class="dice">
+                    d
+                </div>
+                <div class="name">
+                    Raiyan
+                </div>
             </div>
             <div class="p-green">
 
@@ -44,7 +57,7 @@
                 <div class="road-left">
                     <div class="top-road">
                         <div class="box normal"></div>
-                        <div class="box red star">★</div>
+                        <div class="box red star"><i class="fa-solid fa-star"></i></div>
                         <div class="box normal"></div>
                         <div class="box normal"></div>
                         <div class="box normal"></div>
@@ -61,7 +74,7 @@
                     <div class="bottom-road">
                         <div class="box normal"></div>
                         <div class="box normal"></div>
-                        <div class="box red star">★</div>
+                        <div class="box red star"><i class="fa-solid fa-star"></i></div>
                         <div class="box normal"></div>
                         <div class="box normal"></div>
                         <div class="box normal"></div>
@@ -93,7 +106,7 @@
                         <div>
                             <div class="box normal"></div>
                             <div class="box normal"></div>
-                            <div class="box green star">★</div>
+                            <div class="box green star"><i class="fa-solid fa-star"></i></div>
                             <div class="box normal"></div>
                             <div class="box normal"></div>
                             <div class="box normal"></div>
@@ -108,7 +121,7 @@
                         </div>
                         <div>
                             <div class="box normal"></div>
-                            <div class="box green star">★</div>
+                            <div class="box green star"><i class="fa-solid fa-star"></i></div>
                             <div class="box normal"></div>
                             <div class="box normal"></div>
                             <div class="box normal"></div>
@@ -126,7 +139,7 @@
                             <div class="box normal"></div>
                             <div class="box normal"></div>
                             <div class="box normal"></div>
-                            <div class="box blue star">★</div>
+                            <div class="box blue star"><i class="fa-solid fa-star"></i></div>
                             <div class="box normal"></div>
                         </div>
                         <div>
@@ -141,7 +154,7 @@
                             <div class="box normal"></div>
                             <div class="box normal"></div>
                             <div class="box normal"></div>
-                            <div class="box blue star">★</div>
+                            <div class="box blue star"><i class="fa-solid fa-star"></i></div>
                             <div class="box normal"></div>
                             <div class="box normal"></div>
                         </div>
@@ -173,7 +186,7 @@
                         <div class="box normal"></div>
                         <div class="box normal"></div>
                         <div class="box normal"></div>
-                        <div class="box yellow star">★</div>
+                        <div class="box yellow star"><i class="fa-solid fa-star"></i></div>
                         <div class="box normal"></div>
                         <div class="box normal"></div>
                     </div>
@@ -188,10 +201,12 @@
                     </div>
                     <div class="bottom-road">
                         <div class="box normal"></div>
+                        <div class="box normal">
+                            <div class="player-1"></div>
+                        </div>
                         <div class="box normal"></div>
                         <div class="box normal"></div>
-                        <div class="box normal"></div>
-                        <div class="box yellow star">★</div>
+                        <div class="box yellow star"><i class="fa-solid fa-star"></i></div>
                         <div class="box normal"></div>
                     </div>
                 </div>
@@ -214,17 +229,18 @@
                     </div>
                 </div>
             </div>
-   </div>
-   <div class="player1-2">
-    <div class="p-red">
-        
-    </div>
-    <div class="p-green">
+        </div>
+        <div class="player1-2">
+            <div class="p-red">
 
-    </div>
+            </div>
+            <div class="p-green">
 
-</div>
+            </div>
+
+        </div>
     </main>
+    <script src="./script.js"></script>
 </body>
 
 </html>
