--- a/goblins-responsive/index.html
+++ b/goblins-responsive/index.html
@@ -39,7 +39,7 @@
 
     <!-- hero section -->
     <section class="hero">
-        <!-- <div class="hero-text">
+        <div class="hero-text">
             <h5>#2 Trending</h5>
             <h4>Lead Supercell</h4>
             <h1 class="permanent-marker-regular">GOBLINS</h1>
@@ -49,8 +49,8 @@
             <a href="#" class="ctaa"><i class="ri-play-fill"></i>Watch Gameplay</a>
         </div>
         <div class="hero-img">
-            <img src="./image.png" alt="">
-        </div> -->
+            <img src="./image.png">
+        </div>
     </section>
 
     <div class="icons"><a href="#"><i class="ri-instagram-line"></i></a><a href="#"><i
